--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,23 +13,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get_it: ^7.2.0
   provider: ^6.0.1
   dio: ^4.0.4
+  flutter_dotenv: ^5.0.2
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
 
@@ -38,7 +32,7 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
