--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ flutter:
   uses-material-design: true
 
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - .env
   #   - images/a_dot_ham.jpeg
 
 
