--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: estate_project
-description: An estate project made with flutter 
+description: A simple app made with flutter 
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
