--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,24 @@ flutter:
 
   assets:
     - .env
-  #   - images/a_dot_ham.jpeg
+    - assets/images/pngs/
+    - assets/images/svgs/
 
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
- 
+
+  fonts:
+    - family: NSRegular
+      fonts:
+        - asset: assets/fonts/NetflixSansRegular.ttf
+    - family: NSBold
+      fonts:
+        - asset: assets/fonts/NetflixSansBold.ttf  
+    - family: NSMedium
+      fonts:
+        - asset: assets/fonts/NetflixSansMedium.ttf 
+    - family: NSLight
+      fonts:
+        - asset: assets/fonts/NetflixSansLight.ttf
+    - family: NSThin
+      fonts:
+        - asset: assets/fonts/NetflixSansThin.ttf
