ref : finished quick actions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   dio: ^4.0.4
   flutter_dotenv: ^5.0.2
   shared_preferences: ^2.0.8
+  flutter_svg: ^0.22.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
