ref : starting wallet cards

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.0.8
   flutter_svg: ^0.22.0
   intl: ^0.17.0
+  swipe_cards: ^1.0.0
 
 dev_dependencies:
   flutter_test:
